[package]
name = "SS13"
version = "0.0.1"
authors = ["PJB3005 <pieterjan.briers@gmail.com>"]
["clusterfack <clusterfack@users.noreply.github.com>"]
["CrAzYPiLoT-SS13 <minima38123@gmail.com>"]

[dependencies]
piston = "0.25.1"
piston_window = "0.54.0"

[[bin]]
name = "SS13"
path = "src/production/SS13/main.rs"