[package]
name = "client"
version = "0.0.1"
authors = [
    "PJB3005 <pieterjan.briers@gmail.com>",
    "clusterfack <clusterfack@users.noreply.github.com>",
    "CrAzYPiLoT-SS13 <minima38123@gmail.com>"
]
build = "../build.rs"
workspace = "../"
publish = false

[dependencies]
piston = "0.27.0"
piston_window = "0.58.0"
shared = { path = "../shared" }
