[package]
name = "client"
version = "0.0.1"
authors = [
    "PJB3005 <pieterjan.briers@gmail.com>",
    "clusterfack <clusterfack@users.noreply.github.com>",
    "CrAzYPiLoT-SS13 <minima38123@gmail.com>"
]
build = "../build.rs"
workspace = "../"
publish = false

[dependencies]
piston = "0.27.0"
piston_window = "0.60.0"
shared = { path = "../shared" }
slog = "1.3.2"
slog-term = "1.3.3"
lazy_static = "0.2.1"
specs = "0.7.1"
chashmap = "2.1.0"
