[package]
name = "yasss13rtwcf_client"
version = "0.0.2"
authors = [
    "PJB3005 <pieterjan.briers@gmail.com>",
    "clusterfack <clusterfack@users.noreply.github.com>",
    "CrAzYPiLoT-SS13 <minima38123@gmail.com>"
]
# build = "../build.rs"
workspace = "../"
publish = false

[dependencies]
piston = "0.27.0"
piston_window = "0.60.0"
yasss13rtwcf_shared = { path = "../shared" }
slog = "1.3.2"
slog-term = "1.3.3"
lazy_static = "0.2.1"
gfx_device_gl = "0.12.0"
image = "0.10.3"
nalgebra = "0.11.2"
pistoncore-input = "0.15.0"
