[package]
name = "yasss13rtwcf_server"
version = "0.1.0"
authors = [
    "PJB3005 <pieterjan.briers@gmail.com>",
    "clusterfack <clusterfack@users.noreply.github.com>",
    "CrAzYPiLoT-SS13 <minima38123@gmail.com>"
]
# build = "../build.rs"
workspace = "../"
publish = false

[dependencies]
lazy_static = "0.2.1"
yasss13rtwcf_shared = { path = "../shared" }
toml = "0.2.1"
slog = "1.3.2"
slog-term = "1.3.3"
bytes = "0.4.1"
futures = "0.1.11"
tokio-io = "0.1.1"
tokio-core = "0.1.6"
byteorder = "1.0.0"
