[package]
name = "shared"
version = "0.1.0"
authors = [
    "PJB3005 <pieterjan.briers@gmail.com>",
    "clusterfack <clusterfack@users.noreply.github.com>",
    "CrAzYPiLoT-SS13 <minima38123@gmail.com>"
]
workspace = "../"
publish = false

[dependencies]
image = "0.10.3"
rustc-serialize = "0.3.19"
yaml-rust = "0.3.5"
lazy_static = "0.2.1"
toml = "0.2.1"
slog = "1.3.2"
slog-term = "1.3.3"
chashmap = "2.1.0"
nalgebra = "0.11.0"
